feature: adding contact section, files folder adjustments and menu links

--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.4"
+    "next": "14.1.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "swiper": "^10.0.0"
   },
+  "license": "MIT",
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
-  }
+    "eslint-config-next": "14.1.4",
+    "typescript": "^5"
+  },
+  "tags": [
+    "swiper"
+  ]
 }
